--- a/css/styles.css
+++ b/css/styles.css
@@ -211,14 +211,14 @@ body {
 
 /* Main */
 .hero {
-    background-color: var(--bgc-gray);
+    background-color: rgba(47, 48, 58, 0.4);
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/bg.jpg);
-    background-size: cover;
-    /* max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto; */
+    background-size: 1600px 600px;
+    background-repeat: no-repeat;
+    background-position: center;
+
 }
 
 .hero-title {
